# metadocs

./: .gitignore  Dockerfile.postgres  README.md  docker-compose.yml  package-lock.json  package.json  prompt_to_extract_entities.txt  serverless.yml  set_shared_preload.sh
backend/: .dockerignore  create_tables.sh  dockerfile  extract_entities_relations.py  parse.py  pdf-to-image.py  pyproject.toml  test copy.py  test-prompt.txt  test.py  test_graph.py  test_parse.py  test_parse2.py
backend/agent/: app.py  assistant.py  file_storage.py  pdf_parser.py  prompts.py  tools.py
backend/src/: main.py
backend/src/auth/: auth0.py  jwt.py
backend/src/chat/: assistant.py  graph_assistant.py  models.py  prompts.py  tools.py  visualization.py
backend/src/core/: config.py  database.py  permissions.py  security.py  utils.py
backend/src/db/: concepts.py  domains.py  dynamodb.py  methodologies.py  rds.py  sources.py  user_domain_settings.py  user_settings.py  users.py
backend/src/llm/: llm_factory.py
backend/src/middleware/: api_key_middleware.py
backend/src/models/: custom_types.py  models.py  schemas.py
backend/src/processors/: base_processor.py  extract_processor.py  graph_processor.py  group_processor.py  merge_processor.py  ontology_processor.py  parse_processor.py  pipeline_orchestrator.py
backend/src/routers/: auth.py  chat.py  concepts.py  config.py  domains.py  files.py  invitations.py  login.py  methodologies.py  process.py  roles.py  sources.py  user_domain_settings.py  user_settings.py  users.py  version_manager.py
backend/src/utils/: email.py
(+72 files in other folders)
