[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ravindu.somawansa <ravindu.somawansa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<3.12"
fastapi = "0.114.2"
mangum = "0.17.0"
python-jose = "^3.3.0"
requests = "^2.32.3"
boto3 = "^1.35.20"
pydantic = "^2.9.1"
fastapi-jwt-auth = "^0.5.0"
uvicorn = "^0.30.6"
bcrypt = "^4.2.0"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.35"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
